<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hNome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hEmail"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:hint="@string/hCep"
            android:inputType="number"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hSenha"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!--<Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />-->

        <Button
            android:id="@+id/btnCadastro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>