<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etSenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hSenha"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin" />

        <TextView
            android:id="@+id/tvErro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginErrado"
            android:textColor="#F40D0D"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>