<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hEmail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hSenha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin" />

        <TextView
            android:id="@+id/tvErro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginErrado"
            android:textColor="#F40D0D"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>