<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeusObjetos">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPedidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <TextView
        android:id="@+id/tvObjeto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tvVazio"
        android:textColor="#D31515"
        android:textSize="34sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|top"
            android:gravity="center|top"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/pesquisar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:contentDescription="@string/activityPesquisar"
                android:focusable="true"
                android:src="@drawable/ic_pedir_objetos_foreground"
                app:fabCustomSize="56dp"
                app:maxImageSize="90dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/meusPedidos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"

                android:contentDescription="@string/activityListaPedidos"
                android:focusable="true"
                android:foregroundGravity="top"
                android:src="@drawable/ic_pedidos_foreground"
                app:fabCustomSize="56dp"
                app:maxImageSize="95dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/solicitacoes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/activityAlugarObjeto"
                android:focusable="true"
                android:scaleType="center"
                android:src="@drawable/ic_solicitacoes_foreground"
                app:fabCustomSize="56dp"
                app:maxImageSize="90dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:contentDescription="@string/activityNovoObjeto"
                android:focusable="true"
                android:src="@drawable/ic_novo_objeto_foreground"
                app:fabCustomSize="56dp"
                app:maxImageSize="90dp" />
        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>